frontend/src/index.scss
@import './globals';
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@200;400;700&display=swap');

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0 auto;
  padding: 2rem;
  font-family: $body-font;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: black;
  color: white;
  text-shadow: 1px 1px black;
  background-image: url('./img/harmontown-crew-bg.webp');
  background-size: 90%;
  background-repeat: no-repeat;
  background-position: bottom;
  max-width: 1440px;
  min-height: 100vh;

  @include phone-lg {
    padding: 1rem;
    font-size: 0.9em;
  }
}

a {
  color: white;

  &:hover {
    color: $primary-blue-lightest;
  }
}

button {
  cursor: pointer;
  background: none;
  color: white;
  text-transform: uppercase;
  font-family: $body-font;
  font-weight: bold;
  border: 1px solid $bg-gray;
}

mark {
  background-color: rgba($secondary-yellow, 0.5);
  color: unset;
}

input[type=search] {
  width: 100%;
  font-family: $body-font, sans-serif;
  background-color: $bg-gray;
  color: white;
  border-color: transparent;
  border-style: solid;
  border-width: 2px 0 2px 2px;
  padding: 0.5em 1em;
  @include frosted-glass;

  &:focus {
    outline: none;
    border-color: $primary-blue;
  }

  &::-webkit-search-cancel-button {
    display: none;
  }
}

article h1 {
  font-size: 2.5em;
  margin: 0.5em 0;
}

button.search {
  background-color: $primary-blue;
  display: flex;
  align-items: center;
  border: none;
}

.selectable {
  padding: 0.5em 0.75em;
  border-radius: 0.5em;
  
  &:hover:not(.selected) {
    cursor: pointer;
    background-color: rgba(255,255,255, 0.15);
    color: white;
  }
}

.selected {
  cursor: default;
  background-color: rgba($primary-blue, 0.25);
}

